--- a/index-demo.html
+++ b/index-demo.html
@@ -22,15 +22,11 @@
 				<!-- Banner -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>Story</h1>
-							<p class="major">A (modular, highly tweakable) responsive one-page template designed by <a href="https://html5up.net">HTML5 UP</a> and released for free under the <a href="https://html5up.net/license">Creative Commons</a>.</p>
-							<p>This is a <strong>Banner</strong> element, and it's generally used as an introduction or opening statement. You can customize its <span class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an optional <code>onload</code> or <code>onscroll</code> transition modifier (<a href="#reference-banner">details</a>).</p>
-							<ul class="actions stacked">
-								<li><a href="#first" class="button large wide smooth-scroll-middle">Get Started</a></li>
-							</ul>
-						</div>
+							<h1>My Story</h1>
+							<p class="major">Manas is currently a student of D.A.V. KOYLANAGAR. He is one who wants to learn more and more of his own interest whatever it may be.Perhaps,he loves to gain knowldwge in physics and often busy doing practicals in his free time. His ambition is to become a space scientist in ISRO.</p>
+						
 						<div class="image">
-							<img src="images/banner.jpg" alt="" />
+							<img src="images/Rocket isro.jpg" alt="" />
 						</div>
 					</section>
 
